add code to save and load trained model

--- a/MovieLens_Two_Tower_Embedding_NN-v2.ipynb
+++ b/MovieLens_Two_Tower_Embedding_NN-v2.ipynb
@@ -152,7 +152,7 @@
    "source": [
     "# let's only work with movies with enough ratings.\n",
     "\n",
-    "min_ratings_per_movie = 5_000\n",
+    "min_ratings_per_movie = 4_000\n",
     "\n",
     "# get the number of ratings per movie\n",
     "df_movies_to_num_ratings = df_ratings.groupby('movieId', as_index=False)['rating'].count()\n",
@@ -330,7 +330,7 @@
     "# every user will have a feature context that will mostly be their watch history.\n",
     "# instead of using every movie in the corpus, we can use a smaller subset.\n",
     "# this helps with memory issues.\n",
-    "num_movies_for_user_context = 250\n",
+    "num_movies_for_user_context = 500\n",
     "user_context_movies = top_movies[:num_movies_for_user_context]"
    ]
   },
@@ -388,8 +388,8 @@
     "user_context_movieId_to_i = {s:i for i,s in enumerate(list(user_context_movies))}\n",
     "user_context_i_to_movieId = {i:s for s,i in user_context_movieId_to_i.items()}\n",
     "\n",
-    "user_context_genre_to_i = {s:i+len(user_context_movies) for i,s in enumerate(list(genres))}\n",
-    "user_context_i_to_genre = {i:s for s,i in user_context_genre_to_i.items()}"
+    "user_context_genre_avg_rating_to_i = {s:i+len(user_context_movies) for i,s in enumerate(list(genres))}\n",
+    "user_context_i_to_genre_avg_rating = {i:s for s,i in user_context_genre_avg_rating_to_i.items()}"
    ]
   },
   {
@@ -552,7 +552,8 @@
    "source": [
     "# for every user, create the training example user context vector\n",
     "# 0:num_user_context_movies -> user's watch history\n",
-    "# num_user_context_movies:num_user_context_movies+num_genres -> user's genre affinity\n",
+    "# num_user_context_movies:num_user_context_movies+num_genres -> user's genre avg rating\n",
+    "# num_user_context_movies+num_genres:num_user_context_movies+num_genres+num_genres -> user's num movies watched in genre\n",
     "user_to_context = {}\n",
     "for user in user_to_movie_to_rating_WATCH_HISTORY.keys():\n",
     "  context = [0.0] * user_context_size\n",
@@ -565,7 +566,8 @@
     "      context[user_context_movieId_to_i[movieId]] = float(user_to_movie_to_rating_WATCH_HISTORY[user][movieId] - user_to_avg_rating[user])\n",
     "\n",
     "  for genre in user_to_genre_to_stat[user].keys():\n",
-    "    context[user_context_genre_to_i[genre]] = float(user_to_genre_to_stat[user][genre]['AVG_RATING'] - user_to_avg_rating[user])\n",
+    "    # add the user's avg rating for this genre debiased using their actual avg rating from all movies\n",
+    "    context[user_context_genre_avg_rating_to_i[genre]] = float(user_to_genre_to_stat[user][genre]['AVG_RATING'] - user_to_avg_rating[user])\n",
     "\n",
     "  user_to_context[user] = context"
    ]
@@ -662,7 +664,7 @@
     "for user in user_to_movie_to_rating_LABEL.keys():\n",
     "  num_ratings = len(user_to_movie_to_rating_LABEL[user])\n",
     "\n",
-    "  if num_ratings >= 2 and num_ratings < 500:\n",
+    "  if num_ratings >= 5 and num_ratings < 500:\n",
     "    final_users.append(user)\n",
     "\n",
     "len(final_users)"
@@ -745,8 +747,7 @@
     "    def __init__(self, genres_len, top_movies_len, user_context_size,\n",
     "                 item_feature_embedding_size=10,\n",
     "                 item_movieId_embedding_size=40,\n",
-    "                 user_feature_embedding_size=50,\n",
-    "                 dropout_rate=0.5\n",
+    "                 user_feature_embedding_size=50\n",
     "                ):\n",
     "        \"\"\"\n",
     "        Initializes the MovieRecommender model.\n",
@@ -774,7 +775,7 @@
     "\n",
     "        self.user_feature_tower = nn.Sequential(\n",
     "            nn.Linear(user_context_size, user_feature_embedding_size),\n",
-    "            nn.Tanh() # Tanh activation as in original code\n",
+    "            nn.Tanh()\n",
     "        )\n",
     "\n",
     "        # Dimension check: The user embedding size must match the combined item embedding size\n",
@@ -857,13 +858,11 @@
     "# --- Training Loop ---\n",
     "\n",
     "# Define model hyper-parameters\n",
-    "item_feature_embedding_size = 20\n",
+    "item_feature_embedding_size = 10\n",
     "item_movieId_embedding_size = 40\n",
     "\n",
     "# User embedding size must match the sum of item_feature_embedding_size and item_movieId_embedding_size\n",
     "user_feature_embedding_size = item_feature_embedding_size + item_movieId_embedding_size\n",
-    "\n",
-    "dropout_rate=0.2\n",
     "\n",
     "# Instantiate the MovieRecommender model\n",
     "model = MovieRecommender(\n",
@@ -872,8 +871,7 @@
     "    user_context_size=user_context_size,\n",
     "    item_feature_embedding_size=item_feature_embedding_size,\n",
     "    item_movieId_embedding_size=item_movieId_embedding_size,\n",
-    "    user_feature_embedding_size=user_feature_embedding_size,\n",
-    "    dropout_rate=dropout_rate\n",
+    "    user_feature_embedding_size=user_feature_embedding_size\n",
     ")\n",
     "\n",
     "# Print the total number of trainable parameters in the model\n",
@@ -983,7 +981,42 @@
     "id": "6F1xNlzXe4gi"
    },
    "source": [
+    "# Save the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = 'saved_models/20250530.pth'\n",
+    "\n",
+    "torch.save(model.state_dict(), PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "6F1xNlzXe4gi"
+   },
+   "source": [
     "# Actually Using the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MovieRecommender(\n",
+    "    genres_len=len(genres),\n",
+    "    top_movies_len=len(top_movies),\n",
+    "    user_context_size=user_context_size\n",
+    ")\n",
+    "model.load_state_dict(torch.load(PATH, weights_only=True))\n",
+    "model.eval()"
    ]
   },
   {
@@ -1011,8 +1044,7 @@
     "  # compute the combined (concat) item/movie embedding\n",
     "  item_id_emb = movieId_to_embedding[movieId]['MOVIEID_EMBEDDING']\n",
     "  item_feature_emb = movieId_to_embedding[movieId]['MOVIE_FEATURE_EMBEDDING']\n",
-    "  movieId_to_embedding[movieId]['MOVIE_EMBEDDING_COMBINED'] = torch.cat((item_feature_emb.view(item_feature_emb.size(0), -1),\n",
-    "                                       item_id_emb.view(item_id_emb.size(0), -1)), dim=1)"
+    "  movieId_to_embedding[movieId]['MOVIE_EMBEDDING_COMBINED'] = torch.cat((item_feature_emb, item_id_emb), dim=1)"
    ]
   },
   {
@@ -1136,6 +1168,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "tDjCGr5Lhu-K"
+   },
+   "source": [
+    "### Get Recommendations for Users"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1144,7 +1185,7 @@
    "outputs": [],
    "source": [
     "for movieId in user_context_movies:\n",
-    "  print(movieId_to_title[movieId], movieId_to_genres[movieId])"
+    "    print(movieId_to_title[movieId], movieId_to_genres[movieId])"
    ]
   },
   {
@@ -1162,7 +1203,11 @@
     "    'Sci-Fi Lover': ['Sci-Fi'],\n",
     "    'Comedy Lover': ['Comedy'],\n",
     "    'Romance Lover': ['Romance'],\n",
-    "    'War Movie Lover': ['War']\n",
+    "    'War Movie Lover': ['War'],\n",
+    "    'Martial Arts Lover': ['Action'],\n",
+    "\n",
+    "    # profile for myself\n",
+    "    'Myself': ['Fantasy', 'War', 'Horror', 'Drama', 'Action']\n",
     "}\n",
     "\n",
     "user_type_to_worst_genres = {\n",
@@ -1172,7 +1217,11 @@
     "    'Sci-Fi Lover': ['Romance', 'Children'],\n",
     "    'Comedy Lover': ['Children'],\n",
     "    'Romance Lover': ['Children', 'Horror'],\n",
-    "    'War Movie Lover': ['Children']\n",
+    "    'War Movie Lover': ['Children'],\n",
+    "    'Martial Arts Lover': ['Children', 'Romance', 'Drama', 'Horror'],\n",
+    "    \n",
+    "    # profile for myself\n",
+    "    'Myself': ['Romance']\n",
     "}\n",
     "\n",
     "user_type_to_favorite_movies = {\n",
@@ -1213,30 +1262,47 @@
     "        'Saving Private Ryan (1998)',\n",
     "        'Apocalypse Now (1979)',\n",
     "        'Full Metal Jacket (1987)'\n",
+    "    ],\n",
+    "    'Martial Arts Lover': [\n",
+    "        'Kill Bill: Vol. 2 (2004)',\n",
+    "        'Crouching Tiger, Hidden Dragon (Wo hu cang long) (2000)',\n",
+    "        'Last Samurai, The (2003)',\n",
+    "        'Seven Samurai (Shichinin no samurai) (1954)',\n",
+    "    ],\n",
+    "    \n",
+    "    # profile for myself\n",
+    "    'Myself': [\n",
+    "        'Lord of the Rings: The Fellowship of the Ring, The (2001)',\n",
+    "        'Lord of the Rings: The Two Towers, The (2002)',\n",
+    "        'Lord of the Rings: The Return of the King, The (2003)',\n",
+    "        '300 (2007)',\n",
+    "        'Saving Private Ryan (1998)',\n",
+    "        'Kill Bill: Vol. 1 (2003)',\n",
+    "        '28 Days Later (2002)'\n",
     "    ]\n",
     "}\n",
     "\n",
-    "value_for_favorite_genre = float(5.0)\n",
-    "value_for_disliked_genre = float(-2.0)\n",
-    "value_for_favorite_movie = float(2.0)\n",
+    "value_for_favorite_genre_avg_rating = float(5.0)\n",
+    "value_for_disliked_genre_avg_rating = float(-2.0)\n",
+    "value_for_favorite_movie_rating = float(2.0)\n",
     "\n",
     "user_to_inference_context = {}\n",
     "\n",
     "for user_type in user_type_to_favorite_genres.keys():\n",
     "  inference_user_context = [0.0] * user_context_size\n",
     "\n",
-    "  # set genres the user likes.\n",
+    "  # set genres the user likes (avg rating + ratio)\n",
     "  for genre in user_type_to_favorite_genres[user_type]:\n",
-    "    inference_user_context[user_context_genre_to_i[genre]] = value_for_favorite_genre\n",
+    "    inference_user_context[user_context_genre_avg_rating_to_i[genre]] = value_for_favorite_genre_avg_rating\n",
     "\n",
-    "  # set genres that the user dislikes\n",
+    "  # set genres that the user dislikes (avg rating)\n",
     "  for genre in user_type_to_worst_genres[user_type]:\n",
-    "    inference_user_context[user_context_genre_to_i[genre]] = value_for_disliked_genre\n",
+    "    inference_user_context[user_context_genre_avg_rating_to_i[genre]] = value_for_disliked_genre_avg_rating\n",
     "\n",
     "  # set the user's favorite movies.\n",
     "  for title in user_type_to_favorite_movies[user_type]:\n",
     "    movieId = title_to_movieId[title]\n",
-    "    inference_user_context[user_context_movieId_to_i[movieId]] = value_for_favorite_movie\n",
+    "    inference_user_context[user_context_movieId_to_i[movieId]] = value_for_favorite_movie_rating\n",
     "\n",
     "  user_to_inference_context[user_type] = inference_user_context"
    ]
@@ -1313,20 +1379,6 @@
     "for movieId, avg_rating in sorted(movieId_to_avg_rating.items(), key=lambda item: item[1], reverse=True)[0:10]:\n",
     "  print(movieId_to_title[movieId], avg_rating)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
