Update code to allow running training on Apple MPS GPU

--- a/MovieLens_Two_Tower_Embedding_NN-v2.ipynb
+++ b/MovieLens_Two_Tower_Embedding_NN-v2.ipynb
@@ -11,6 +11,8 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "\n",
+    "import time\n",
     "import random\n",
     "\n",
     "import pandas as pd\n",
@@ -53,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "num_ratings_to_read = 35_000_000\n",
+    "num_ratings_to_read = 5_000_000\n",
     "\n",
     "df_ratings = pd.read_csv(movielens_data_dir + '/ratings.csv', nrows=num_ratings_to_read)"
    ]
@@ -152,7 +154,7 @@
    "source": [
     "# let's only work with movies with enough ratings.\n",
     "\n",
-    "min_ratings_per_movie = 4_000\n",
+    "min_ratings_per_movie = 1_000\n",
     "\n",
     "# get the number of ratings per movie\n",
     "df_movies_to_num_ratings = df_ratings.groupby('movieId', as_index=False)['rating'].count()\n",
@@ -330,7 +332,7 @@
     "# every user will have a feature context that will mostly be their watch history.\n",
     "# instead of using every movie in the corpus, we can use a smaller subset.\n",
     "# this helps with memory issues.\n",
-    "num_movies_for_user_context = 500\n",
+    "num_movies_for_user_context = 250\n",
     "user_context_movies = top_movies[:num_movies_for_user_context]"
    ]
   },
@@ -731,10 +733,15 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "user_features ---------------> u_W1\n",
-    "                                    \\\n",
+    "user_features   -> u_W1\n",
+    "                        \\         \n",
+    "                         --> stack\n",
+    "                        /          \\\n",
+    "timestamp_emb   -> t_W1             \\\n",
     "                                     \\\n",
-    "                                      --> dot_product(user, item) --> prediction\n",
+    "                                      \\\n",
+    "                                       --> dot_product(user, item) --> prediction\n",
+    "                                      /\n",
     "                                     /\n",
     "movie_features  -> i_W1             /\n",
     "                        \\          /\n",
@@ -875,8 +882,54 @@
     ")\n",
     "\n",
     "# Print the total number of trainable parameters in the model\n",
-    "print(f\"Number of trainable parameters: {sum(p.nelement() for p in model.parameters() if p.requires_grad)}\")\n",
+    "print(f\"Number of trainable parameters: {sum(p.nelement() for p in model.parameters() if p.requires_grad)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USE_GPU = False\n",
     "\n",
+    "if USE_GPU:\n",
+    "    mps_device = torch.device(\"mps\")\n",
+    "    \n",
+    "    # Move the model to the GPU\n",
+    "    model.to(mps_device)\n",
+    "    \n",
+    "    # move validation data to MPS\n",
+    "    X_val = X_val.to(mps_device)\n",
+    "    target_movieId_context_val = target_movieId_context_val.to(mps_device)\n",
+    "    target_movieId_val = target_movieId_val.to(mps_device)\n",
+    "    Y_val = Y_val.to(mps_device)\n",
+    "    \n",
+    "    # move tranining data to MPS\n",
+    "    X_train = X_train.to(mps_device)\n",
+    "    target_movieId_context_train = target_movieId_context_train.to(mps_device)\n",
+    "    target_movieId_train = target_movieId_train.to(mps_device)\n",
+    "    Y_train = Y_train.to(mps_device)\n",
+    "else:\n",
+    "    # move validation data to CPU\n",
+    "    X_val = X_val.cpu()\n",
+    "    target_movieId_context_val = target_movieId_context_val.cpu()\n",
+    "    target_movieId_val = target_movieId_val.cpu()\n",
+    "    Y_val = Y_val.cpu()\n",
+    "    \n",
+    "    # move tranining data to CPU\n",
+    "    X_train = X_train.cpu()\n",
+    "    target_movieId_context_train = target_movieId_context_train.cpu()\n",
+    "    target_movieId_train = target_movieId_train.cpu()\n",
+    "    Y_train = Y_train.cpu()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Set the loss function (Mean Squared Error Loss for regression)\n",
     "loss_fn = torch.nn.MSELoss()\n",
     "\n",
@@ -889,7 +942,7 @@
     "loss_train = [] # To store training loss for each step\n",
     "loss_val = []   # To store validation loss for full validation runs\n",
     "\n",
-    "log_every = 10_000       # How often to perform a full validation run and log\n",
+    "log_every = 10_000      # How often to perform a full validation run and log\n",
     "training_steps = 100_000 # Total training iterations"
    ]
   },
@@ -901,6 +954,7 @@
    "source": [
     "print(\"\\nStarting training loop...\")\n",
     "\n",
+    "start = time.time()\n",
     "for i in range(training_steps):\n",
     "    is_full_val_run = False\n",
     "    if i % log_every == 0:\n",
@@ -913,10 +967,15 @@
     "        movie_contexts_batch = target_movieId_context_val\n",
     "        target_movieId_batch = target_movieId_val\n",
     "        Y_batch = Y_val\n",
-    "        model.eval() # Set model to evaluation mode (e.g., disables dropout if present)\n",
+    "\n",
+    "        # Set model to evaluation mode (e.g., disables dropout if present)\n",
+    "        model.eval()\n",
+    "        \n",
     "        with torch.no_grad(): # Disable gradient calculations for validation\n",
     "            preds = model(user_contexts_batch, movie_contexts_batch, target_movieId_batch)\n",
     "            output = loss_fn(preds, Y_batch)\n",
+    "\n",
+    "        # Store validation loss for this batch\n",
     "        loss_val.append(output.item()) # Store validation loss\n",
     "    else:\n",
     "        # Construct a random minibatch from training data\n",
@@ -924,21 +983,31 @@
     "        user_contexts_batch = X_train[ix]\n",
     "        movie_contexts_batch = target_movieId_context_train[ix]\n",
     "        target_movieId_batch = target_movieId_train[ix]\n",
-    "        Y_batch = Y_train[ix]\n",
-    "        model.train() # Set model to training mode (e.g., enables dropout)\n",
+    "        Y_batch = Y_train[ix]      \n",
+    "\n",
+    "        # Set model to training mode (e.g., enables dropout)\n",
+    "        model.train()\n",
     "\n",
     "        # Forward pass\n",
     "        preds = model(user_contexts_batch, movie_contexts_batch, target_movieId_batch)\n",
     "        output = loss_fn(preds, Y_batch)\n",
-    "        loss_train.append(output.item()) # Store training loss for this batch\n",
     "\n",
     "        # Backpropagation and update weights\n",
     "        optimizer.zero_grad() # Clear gradients from the previous step\n",
     "        output.backward()     # Compute gradients for all parameters\n",
     "        optimizer.step()      # Update model parameters using the computed gradients\n",
     "\n",
+    "        # Store training loss for this batch\n",
+    "        loss_train.append(output.item())\n",
+    "\n",
     "    # Logging\n",
     "    if is_full_val_run:\n",
+    "        # print how long in between each full val run\n",
+    "        end = time.time()\n",
+    "        length = end - start\n",
+    "        print(\"Total time: \", length, \"seconds\")\n",
+    "        start = time.time()\n",
+    "        \n",
     "        # Calculate average training loss over the last `log_every` batches\n",
     "        if i >= log_every:\n",
     "            avg_train_loss_last_batches = np.mean(loss_train[i-log_every:i])\n",
